force-app/main/default/objects/Credential_Deletion_Log__c/Credential_Deletion_Log__c.object-meta.xml
<CustomObject>
    <label>Credential Deletion Log</label>
    <nameField>
        <displayFormat>CDL-{00000}</displayFormat>
        <label>Credential Deletion Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credential Deletion Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>