force-app/main/default/objects/Credential_Deletion_Log__c/fields/Credential_Id__c.field-meta.xml
<CustomField>
    <fullName>Credential_Id__c</fullName>
    <label>Credential Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>