force-app/main/default/objects/Credential_Deletion_Log__c/fields/Deletion_Log_Id__c.field-meta.xml
<CustomField>
    <fullName>Deletion_Log_Id__c</fullName>
    <label>Deletion Log Id</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>